tests/ui/imports/import3.stderr
error[E0432]: unresolved import `main`
  --> $DIR/import3.rs:2:5
   |
LL | use main::bar;
   |     ^^^^ use of unresolved module or unlinked crate `main`
   |
help: if you wanted to use a crate named `main`, use `cargo add main` to add it to your `Cargo.toml` and import it in your code
   |
LL + extern crate main;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
